--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"axios": "^1.7.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-router-dom": "^6.24.0"
+		"react-router-dom": "^6.24.0",
+		"usehooks-ts": "^3.1.0"
 	},
 	"devDependencies": {
 		"@types/axios": "^0.14.0",
