--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "jest"
 	},
 	"dependencies": {
 		"axios": "^1.7.2",
@@ -17,7 +18,10 @@
 		"usehooks-ts": "^3.1.0"
 	},
 	"devDependencies": {
+		"@testing-library/dom": "^10.2.0",
+		"@testing-library/react": "^16.0.0",
 		"@types/axios": "^0.14.0",
+		"@types/jest": "^29.5.12",
 		"@types/node": "^20.14.9",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
@@ -28,6 +32,8 @@
 		"eslint": "^8.57.0",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-react-refresh": "^0.4.7",
+		"jest": "^29.7.0",
+		"ts-jest": "^29.1.5",
 		"typescript": "^5.2.2",
 		"vite": "^5.3.1"
 	}
