--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"@testing-library/user-event": "^14.5.2",
 		"axios": "^1.7.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -19,6 +20,7 @@
 	},
 	"devDependencies": {
 		"@testing-library/dom": "^10.2.0",
+		"@testing-library/jest-dom": "^6.4.6",
 		"@testing-library/react": "^16.0.0",
 		"@types/axios": "^0.14.0",
 		"@types/jest": "^29.5.12",
@@ -32,7 +34,9 @@
 		"eslint": "^8.57.0",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-react-refresh": "^0.4.7",
+		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
 		"ts-jest": "^29.1.5",
 		"typescript": "^5.2.2",
 		"vite": "^5.3.1"
