--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,7 +2,6 @@
 	"compilerOptions": {
 		"composite": true,
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-		"target": "ES2020",
 		"useDefineForClassFields": true,
 		"lib": ["ES2020", "DOM", "DOM.Iterable"],
 		"module": "ESNext",
@@ -12,7 +11,7 @@
 
 		/* Bundler mode */
 		"moduleResolution": "bundler",
-		"allowImportingTsExtensions": true,
+
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"moduleDetection": "force",
@@ -26,5 +25,5 @@
 		"noFallthroughCasesInSwitch": true
 	},
 	"exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts"],
-	"include": ["./src/**/*.tsx", "./src/**/*.ts"]
+	"include": ["./src/**/*.tsx", "./src/**/*.ts", "globals.d.ts"]
 }
